---------------------------------------------------------------------------------------------------
Version: 0.00.00
Date: 00. 00. 0000
  Features:
    - Added a button to unfold subfloors, meaning they will be shown on the top level without needing to go down into them
    - Added a preference that, when enabled, adds a subfactory's products as icons to its name in the subfactory list
  Changes:
    -
  Bugfixes:
    -

---------------------------------------------------------------------------------------------------
Version: 1.1.58
Date: 03. 09. 2022
  Bugfixes:
    - Fixed a bug where some line products would be shown with an amount of -1
    - Fixed a crash when trying to paste a line with subfloor as a top level product
    - Fixed a rare crash when cycling through production views

---------------------------------------------------------------------------------------------------
Version: 1.1.57
Date: 30. 08. 2022
  Changes:
    - Added custom support for Space Exploration Arcosphere recipes
    - Added a hotkey to cycle backwards through the different production views (Shift + Tab)
    - Changed the hotkey that toggles between the main and compact dialogs to open the compact view when used while no dialog is open, instead of silently switching between them in the background
    - Removed the floor up hotkey
  Bugfixes:
    - Fixed a crash with the subfactory to combinator functionality when there are only fluid ingredients

---------------------------------------------------------------------------------------------------
Version: 1.1.56
Date: 29. 08. 2022
  Bugfixes:
    - Fixed a crash when switching to the items/s/machine view in some cases

---------------------------------------------------------------------------------------------------
Version: 1.1.55
Date: 28. 08. 2022
  Bugfixes:
    - Fixed a crash when trying to convert fluid ingredients to a combinator
    - Fixed a rare bug where total subfactory ingredients were not being summed up correctly
