@@ -19,5 +19,6 @@
     "1.1.26",
     "1.1.27",
     "1.1.42",
-    "1.1.43"
+    "1.1.43",
+    "1.1.59"
 ]
