@@ -4,6 +4,7 @@ Date: 00. 00. 0000
   Features:
     - Added a button to unfold subfloors, meaning they will be shown on the top level without needing to go down into them
     - Added a preference that, when enabled, adds a subfactory's products as icons to its name in the subfactory list
+    - Added the ability to paste whole lines as top level products, setting product amounts and copying the line(s) over
   Changes:
     -
   Bugfixes:
